[package]
name = "danjon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = { version = "0.11.0", features = ["fuzzy-select", "completion"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
