[package]
name = "danjon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.25.0", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.79"
once_cell = "1.19.0"
inquire = "0.6.2"
yansi = "0.5.1"
nom = "7.1.3"
pretty_assertions = "1.4.0"
tiny-gradient = "0.1.0"
strip-ansi-escapes = "0.2.0"
rand = "0.8.5"
